--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Dr. Xuekui Zhang"
 title_separator          : "-"
 name                     : &name "Dr. Xuekui Zhang"
 description              : &description "Assistant professor at the University of Victoria & Canada Research Chair in Biostatistics and Bioinformatics (Tier 2)"
-url                      : https://Xuekui-Zhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ubcXZhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Xuekui-Zhang.github.io"
+repository               : "ubcXZhang.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
