--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Dr. Xuekui Zhang"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Assistent professor at the University of Victoria and Canada Research Chair in Biostatistics and Bioinformatics (Tier 2)"
+  location         : "Victoria, BC, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"
   email            :
