--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Dr. Xuekui Zhang"
   avatar           : "profile.png"
   bio              : |-
-   "Assistent professor at the University of Victoria"
-  "Canada Research Chair in Biostatistics and Bioinformatics (Tier 2)"
+   Assistent professor at the University of Victoria
+  Canada Research Chair in Biostatistics and Bioinformatics (Tier 2)
   location         : "Victoria, BC, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"
