--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,15 +8,19 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
-    
+
+  - title: "Team"
+    url: /team/
+
+
 #  - title: "Portfolio"
 #    url: /portfolio/
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+#  - title: "CV"
+#    url: /cv/
     
 #  - title: "Guide"
 #    url: /markdown/
