--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,9 @@ main:
   - title: "Team"
     url: /team/
 
-
+- title: "Links"
+  url: /links/
+  
 #  - title: "Portfolio"
 #    url: /portfolio/
         
