--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
 
-  - title: "Team"
-    url: /team/
+ # - title: "Team"
+ #   url: /team/
 
 - title: "Links"
   url: /links/
