--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "theme",
     "minimal"
   ],
-  "author": "Michael Rose",
+  "author": "Xuekui Zhang",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mmistakes/minimal-mistakes/issues"
