--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Xuekui Zhang"
   avatar           : "profile.png"
-  bio              : "Canada Research Chair (Tier 2) \n MSFHR Scholar \n Assistant professor at the University of Victoria"
+  bio              : "Tier 2 Canada Research Chair / <br> MSFHR Scholar / <br> Assistant professor at the University of Victoria"
   location         : "Victoria, BC, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"
