--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Xuekui Zhang"
   avatar           : "profile.png"
-  bio              : "Assistant Professor at University of Victoria, <br> Tier 2 Canada Research Chair, <br> MSFHR Scholar"
+  bio              : "Assistant Professor at UVic, <br> Tier 2 Canada Research Chair, <br> MSFHR Scholar"
   location         : "Victoria, BC, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"
