--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Dr. Xuekui Zhang"
 title_separator          : "-"
 name                     : &name "Dr. Xuekui Zhang"
-description              : &description "Assistant professor at the University of Victoria & Tier 2 Canada Research Chair & MSFHR Scholar"
+description              : &description "Associate professor at the University of Victoria & Tier 2 Canada Research Chair & MSFHR Scholar"
 url                      : https://ubcxzhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ubcxzhang.github.io"
